package DP.DP_In_Class.Adapter;

public interface Duck {

    public void fly();

    public void quack();

}
