package DP.DP_In_Class.Adapter;

public interface Turkey {
    public void gobble();

    public void fly();

}
