package DP.DP_In_Class.Adapter;

public class WildTurkey implements Turkey {


    public void gobble() {
        System.out.println("The wild turkey gobbles");
    }

    public void fly() {
        System.out.println("The turkeys fly at very low height");
    }
}
